This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.12.6 (UNRELEASED)
-------------------
 * sandboxutils.needed_runtime_packages(): Create cache directory for
   Contents.gz if missing. (LP: #933199)
 * apt/dpkg: Recognize options in apt sources.list. (LP: #1238620)

2.12.5 (2013-09-27)
-------------------
 * Report.add_os_info(): Do not overwrite already existing data.
   (LP: #1226776)
 * kernel_oops hook: Collect uname at the time of invoking the hook, instead of
   at data collection time. (LP: #1226776)
 * Replace fixed size icons with PNGs, which are more efficient and avoid
   rendering artifacts. (LP: #1231763)

2.12.4 (2013-09-19)
-------------------
 * Update icons to new design from Vishnoo Charan Reddy, many thanks!
   (LP: #1079639)

2.12.3 (2013-09-19)
-------------------
 * ProblemReport.write_mime(): Adjust MIMEText handling to latest Python 3.3
   upstream changes which now don't tolerate passing bytes any more.
   (LP: #1227381)
 * apport-gtk: Don't use obsolete add_with_viewport() method any more.
 * Fix ui_present_report_details() "modal_for" keyword for all UI
   implementations, so that --hanging works for -cli and -kde, too.
   (LP: #1213790)

2.12.2 (2013-09-17)
-------------------
 * fileutils.py, get_{new,all}_reports(): Don't consider reports which are
   readable, but not writable. (LP: #1098844)
 * test_ui_kde.py: Cleanly skip the test if PyQt/PyKDE are not installed,
   instead of failing.
 * crash-digger: Write pid into lock file. Thanks Steve Langasek.
 * apport-gtk: When loading a Bug report from a file, properly set up for bug
   reporting mode. (LP: #1226140)
 * Move "program is not installed any more" check from report loading into data
   collection, so that crash reports can be moved and reported on machines
   without that program installed. (LP: #1226030)

2.12.1 (2013-08-19)
-------------------